:bulb:Implemented testimonial section

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@
 
     --primary-foreground: 0 0% 98%;
 
-    --secondary: 0 0% 96.1%;
+    --secondary: 221, 39%, 11%;
 
     --secondary-foreground: 0 0% 9%;
 
